# mandelbrot

./: CMakeLists.txt  README.md
include/: Mandelbrot.h  Window.h
src/: Mandelbrot.cpp  Window.cpp  main.cpp
